--- a/index.html
+++ b/index.html
@@ -162,9 +162,10 @@
   	 
    
             <h3>IHSA NEWS</h3>
-		<!--	<p> IHSA Officials Department as issue that the deadline for renewing your officiating license without penalty is midnight, <strong>June 30th.                         </strong>.</p> -->
-		<!--	 <p> The IHSA will host our <strong>Officials Conference</strong> on July 8th and 9th at Normal West High School.
-     	                  Our host hotel is the Holiday Inn on the north edge of Normal... -->
+            <p> IHSA Officials Department as issue that the renewing date for officiating licenses begins <strong>May 1th.                         </strong>.</p>
+		<!--	<p> IHSA Officials Department as issue that the deadline for renewing your officiating license without penalty is midnight, <strong>June 30th.                         </strong>.</p> <--
+			 <p> The IHSA will host our <strong>Officials Conference</strong> on July 7th and 8th at Normal West High School.
+     	                  Our host hotel is the Holiday Inn on the north edge of Normal...
 	    <!--    <p> Contracts Posted: Football / First Round </p> -->
 	      <!--  <p> 10/14  Contracts Posted: Football / Second Round </p> 
 	              	<p>10/21  Contracts Posted: Football / Quarterfinals </p>  
