--- a/meeting.html
+++ b/meeting.html
@@ -122,13 +122,15 @@
 	</div> -->
 		
 		<div id="subbanner">
-			 <!--<h1>Next meeting well be held on the <br> August 15th </h1>-->
-			<h1>2023 Meeting will be announce in early July </h1>
+			 <!--<h1>Next meeting well be held on the <br> August 14th </h1>
+			<h1>2023 Meeting will be announce in early July </h1>-->
+			<h1>Next meeting well be held on the <br> Monday July 24th 2023  </h1>
+
 
     	    </div>
 	
         <div id="content" style="width: 638px; height: 551px; background-color:#CCCCCC">          
-			<p Style="color:Tomato; text-align:center; font-size:24px;"><a href="Meeting Agenda August 15th.pdf">Copy of the Agenda for Tonight<br> click here</a></p>
+			<p Style="color:Tomato; text-align:center; font-size:24px;"><a href="Meeting Agenda July 24 2023.docx">Copy of the Agenda for Tonight<br> click here</a></p>
 			<p Style="color:Tomato; text-align:center; font-size:24px;">&nbsp;</p>
                      
 		<iframe width="300" height="300" style="float: Center; margin-left: 10px; margin-bottom: 5px; border: solid black 1px; padding: 2px"
