--- a/meeting.html
+++ b/meeting.html
@@ -122,16 +122,18 @@
 	</div> -->
 		
 		<div id="subbanner">
+		<h1>2023 Meeting will be announce in early July 202<br> Have great season. </h1>
 			 <!--<h1>Next meeting well be held on the <br> August 14th </h1>
-			<h1>2023 Meeting will be announce in early July </h1>-->
-			<h1>Next meeting well be held on the <br> Monday July 24th 2023  </h1>
+			
+			<h1>Next meeting well be held on the <br> Monday July 24th 2023  </h1>-->
 
 
     	    </div>
 	
         <div id="content" style="width: 638px; height: 551px; background-color:#CCCCCC">          
-			<p Style="color:Tomato; text-align:center; font-size:24px;"><a href="Meeting Agenda July 24 2023.docx">Copy of the Agenda for Tonight<br> click here</a></p>
-			<p Style="color:Tomato; text-align:center; font-size:24px;">&nbsp;</p>
+		<!--	<p Style="color:Tomato; text-align:center; font-size:24px;"><a href="Meeting Agenda July 24 2023.docx">Copy of the Agenda for Tonight<br> click here</a></p>
+			<p Style="color:Tomato; text-align:center; font-size:24px;">&nbsp;</p>-->
+			
                      
 		<iframe width="300" height="300" style="float: Center; margin-left: 10px; margin-bottom: 5px; border: solid black 1px; padding: 2px"
 			id="I1" src="https://maps.google.com/maps?q=14903%20Founders%20Crossing,%20Homer%20Glen,%20IL%2060491&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" name="I1"></iframe> 
