--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
 			<p> IHSA Officials Department as issue that the deadline for renewing your officiating license without penalty is midnight, <strong>June 30th.                         </strong>.</p> 
 			
  			<p> The IHSA will host our <strong>Officials Conference</strong> on July 7th and 8th at Normal West High School.
-     	                  Our host hotel is the Holiday Inn on the north edge of Normal... -->
+     	                  Our host hotel is the Holiday Inn on the north edge of Normal... 
 	      <p> Contracts Posted: Football / First Round </p> 
 	      <p> Contracts Posted: Football / Second Round </p> 
-	    	<p>Contracts Posted: Football / Quarterfinals </p>  
+	    	<p>Contracts Posted: Football / Quarterfinals </p>  -->
 	        	<!--	<p>10/27  Contracts Posted: Football / Semifinals </p> 
 	    		   <p>11/3  Contracts Posted: Football / Championships</p> 
        			   <p style="text-align:center;> Letter From: Kurt Gibson  </p> -->
