--- a/meeting.html
+++ b/meeting.html
@@ -122,7 +122,7 @@
 	</div> -->
 		
 		<div id="subbanner">
-		<h1>2023 Meeting will be announce in early July 202<br> Have great season. </h1>
+		<h1>2024 Meeting will be announce in early July 2024<br> Have great summer. </h1>
 			 <!--<h1>Next meeting well be held on the <br> August 14th </h1>
 			
 			<h1>Next meeting well be held on the <br> Monday July 24th 2023  </h1>-->
