--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
    
             <h3>IHSA NEWS</h3>
            <p> IHSA Officials Department as issue that the renewing date for officiating licenses begins <strong>May 1th.                         </strong>.</p>
-		 <!--	<p> IHSA Officials Department as issue that the deadline for renewing your officiating license without penalty is midnight, <strong>June 30th.                         </strong>.</p> 
+		 <!--	<p> IHSA Officials Department as issue that the deadline for renewing your officiating license without penalty is midnight, <strong>June 30th. </strong>.</p> -->
 			
- 			<p> The IHSA will host our <strong>Officials Conference</strong> on July 7th and 8th at Normal West High School.
-     	                  Our host hotel is the Holiday Inn on the north edge of Normal... 
-	      <p> Contracts Posted: Football / First Round </p> 
+ 			<p> The IHSA will host our <strong>Officials Conference</strong> on July 12th and 13th at Normal West High School.
+     	                  The host hotel is the Holiday Inn on the north edge of Normal... 
+	   <!--   <p> Contracts Posted: Football / First Round </p> 
 	      <p> Contracts Posted: Football / Second Round </p> 
 	    	<p>Contracts Posted: Football / Quarterfinals </p>  -->
 	        	<!--	<p>10/27  Contracts Posted: Football / Semifinals </p> 
@@ -196,8 +196,8 @@
 				<li>&nbsp;Both credit is good for two years.</li> 
 				<li>State Series Availability.</li>
 				<li>Varsity Contests worked.</li>
-				<li></li> -->
-				</ul>
+				<li></li> 
+				</ul>-->
 		 	        
 			<!-- 	<li><strong>Change in Power Rating Calculation</strong><a style="color:tomato;" href="images/Change in Power Rating Calculation.jpg">  Letter From: Kurt Gibson ..Read More</a></li>   	    	    	    	  	    	    	    	
      	    	    	    	
