--- a/clinic.html
+++ b/clinic.html
@@ -76,59 +76,23 @@
 		</div>
 		
 		
-	<!--	 <div id="slider">
-
-		<ul id="sliderContent">		
-		<li class="sliderImage">
-				<img src="images/banner1.jpg" />
-				<span style="text-align:center" class="top"><strong >  IHSA </strong><br />Summer Officials Conference<br />The IHSA will host our Officials Conference on <br /> July 8th and 9th at Normal West High School.<br /> Our host hotel is the Holiday Inn<br />on the north edge of Normal..<br /> </span>
-			</li>
-			
-			<li class="sliderImage">
-				<img src="images/banner2.jpg"/>
-				<span class="top"><strong>Flag Rules for 2022</strong><br />Well be update later in year <br />Click the Rule tab for information<br /><br /><br /> <br /></span>
-			</li>
-			
-			<li class="sliderImage">
-				<img src="images/banner3.jpg" />
-				<span class="top"><strong>Clinic 2022</strong><br />Pontiac High School.<br />Sunday August 14th<br />Level 1 and ll<br />Registration nooon to 1:00pm<br />Click the bottom below for more information<br/><a href="Clinic.html">CLINIC</a><br>
-						<br /> <br /> <br /></span>
-			</li>
-
-			<li class="sliderImage">
-				<img src="images/banner4.jpg" />
-				<span class="top"><strong>Football Rules Changes</strong><br /><br /> <br /><br /><br /><br /></span>
-			</li>
-
-			<li class="sliderImage">
-				<img src="images/banner5.jpg" />
-				<span class="top"><strong>>Contact Dean Magro</strong><br />P.O Box 1145<br />Beecher, IL 60401<br />Phone 219-688-0875<br />Click the contact tab for more information <br /> <br /> <br /></span>
-			</li>
-
-		</ul>
 	
+<div>
 	
-	</div> -->
-
-	<!--<div>
-	<a class="button" href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">Pontiac High School</a><br>
-	</div> -->
+<!--	<a class="button" href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">Pontiac High School</a><br> -->
+	</div> 
 	<div id="subbanner">
-			<h1> Next Clinic will be held August 2024 Have great Season</h1>
+			<h1> Next Clinic will be held Sunday August 12th 2024.</h1>
 	<!--		<h1> Click on the flyer for directions</h1> -->
 
-    	    </div>
-
-	<!--		<h1 style="text-align:center; width: 1243px;">Click on the flyer for directions </h1> -->
-    	    
-	
+    	    </div>	
 	
 	
 	<a href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">
-		<img src="images/Football Clinic 2023.jpg"alt="Clinic 2022 " style="width:900px;height:500px;" /></a>
+		<img src="images/Football Clinic 2024.jpg" style="width:900px;height:400px;" /></a>
        	
 		<div id="footer">
-			<p>&copy;Copyright July 2022 Shayes. &#127944;</p>
+			<p>&copy;Copyright May 2024 Shayes. &#127944;</p>
 		</div>
         </div>
 
