--- a/index.html
+++ b/index.html
@@ -163,10 +163,11 @@
    
             <h3>IHSA NEWS</h3>
            <p> IHSA Officials Department as issue that the renewing date for officiating licenses begins <strong>May 1th.                         </strong>.</p>
-		 <!--	<p> IHSA Officials Department as issue that the deadline for renewing your officiating license without penalty is midnight, <strong>June 30th. </strong>.</p> -->
+		 <!--	<p> IHSA Officials Department as issue that the deadline for renewing your officiating license without penalty is midnight, <strong>June 30th. </strong>.</p>
 			
  			<p> The IHSA will host our <strong>Officials Conference</strong> on July 12th and 13th at Normal West High School.
-     	                  The host hotel is the Holiday Inn on the north edge of Normal... 
+     	                  The host hotel is the Holiday Inn on the north edge of Normal...  -->
+	    
 	   <!--   <p> Contracts Posted: Football / First Round </p> 
 	      <p> Contracts Posted: Football / Second Round </p> 
 	    	<p>Contracts Posted: Football / Quarterfinals </p>  
