--- a/meeting.html
+++ b/meeting.html
@@ -148,13 +148,13 @@
 		
 <!--	    <li>7:00 pm- Ihsa Delegates meeting- Tim Feiden </li> -->
 	     <li> 7:00pm Bring your calender as we will start to assign 2025 Varsity Football Games. </li>
-             <li> 7:30pm We will also go over Goaline Mechanics and Special team plays.</li>
+             <li> 7:30pm We will  go over the 2024 football season Part One Exam.</li>
 			
-	   <!-- <li>7:10 pm- Pat Goss- Get ready for season </li> -->
+	   <!-- <li>7:10 pm- Pat Goss- Get ready for season </li> 
 	    
 	    <li>7:45- Warren Cushingberry- Professionalism dress code being on time</li>
 	     
-	  <!--   <li>7:30Spiro Hayes- New Rules/ Ponts of emphasis </li>
+	    <li>7:30Spiro Hayes- New Rules/ Ponts of emphasis </li>
 	 <li>7:40 pm- Introduction of members <br></li> -->
          <li>7:55 pm - Payment of dues </li>
  	<!--	 <li>8:05- Assignment of games 2025 season. We will assign 2025 games and review 2024 games</li>
