--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   	 
    
             <h3>IHSA NEWS</h3>
-           <p> IHSA Officials Department as issue that the renewing date for officiating licenses begins <strong>May 1th.                         </strong>.</p>
+        <!--   <p> IHSA Officials Department as issue that the renewing date for officiating licenses begins <strong>May 1th.                         </strong>.</p> -->
 		 <!--	<p> IHSA Officials Department as issue that the deadline for renewing your officiating license without penalty is midnight, <strong>June 30th. </strong>.</p>
 			
  			<p> The IHSA will host our <strong>Officials Conference</strong> on July 12th and 13th at Normal West High School.
@@ -206,8 +206,8 @@
 		<li><a href="meeting.html">Monday July 29th Front Row Homer Glen 6:30pm </a></li>  		    
 			      
 		      <li>Congratulations! Dean Magro crew for officiating the 4A State Final. </li>
-                <li>Meeting on Monday August 14th 2023</li> -->
-		 <li><a href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">Sunday August 18th Livel 1/Level 2 Clinic 12:pm Registration</a></li>      
+                <li>Meeting on Monday August 14th 2023</li> 
+		 <li><a href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">Sunday August 18th Livel 1/Level 2 Clinic 12:pm Registration</a></li>     --> 
 		 <li><a  href="meeting.html">Monday August 26th Front Row Homer Glen 6:30pm Part 1 Review</a></li> 
            </ul> 
 
