--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 	     <!--   		<p>10/27  Contracts Posted: Football / Semifinals </p> 
 	    		   <p>11/3  Contracts Posted: Football / Championships</p>        			   
 	
-		  <p style="text-align:center; color:red; width: 188px; height: 46px;">The following must be completed by 9/13 </p> 
+	<!--	  <p style="text-align:center; color:red; width: 188px; height: 46px;">The following must be completed by 9/13 </p> 
                  <ul>
 			        <li>Part One Test</li>
 		 	        <li>Rules Video</li>
@@ -225,4 +225,5 @@
 </div>
 </body>
 </html>
+
 
