--- a/index.html
+++ b/index.html
@@ -221,8 +221,10 @@
 			      
 		      <li>Congratulations! Dean Magro crew for officiating the 4A State Final. </li>
                 <li>Meeting on Monday August 14th 2023</li> 
-		 <li><a href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">Sunday August 18th Livel 1/Level 2 Clinic 12:pm Registration</a></li>     --> 
-		 <li><a  href="meeting.html">Next Meeting late July 2026 at Front Row Homer Glen </a></li> 
+		 <li><a href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">Sunday August 18th Livel 1/Level 2 
+				  Clinic 12:pm Registration</a></li>     --> 
+	
+				  <li><a  href="meeting.html">Next Meeting late July 2026 at Front Row Homer Glen </a></li> 
            </ul> 
 
         </div>
@@ -234,4 +236,5 @@
 </div>
 </body>
 </html>
+
 
