--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="top">
     
       <div id="logo">
-            <img src="Logo%20NEIFOA.jpg" />
+            <img src="Logo NEIFOA.jpg" />
       </div>
 		
      <!--   <div id="social-media">
@@ -233,3 +233,4 @@
 </div>
 </body>
 </html>
+
