--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="top">
     
       <div id="logo">
-            <img src="Logo.jpg" />
+           <img src="images/Logo NEIFOA.jpg" alt="Logo" />
       </div>
 		
      <!--   <div id="social-media">
@@ -233,5 +233,6 @@
 </div>
 </body>
 </html>
+
 
 
