--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
                 <li>Meeting on Monday August 14th 2023</li> 
 		 <li><a href="https://www.google.com/maps?z=12&q=40.88800,-88.61640+(Pontiac+High+School,+1100+Indiana+Ave.)">Sunday August 18th Livel 1/Level 2 Clinic 12:pm Registration</a></li>     --> 
 
-				  <li> >Association Meetings:</li>>
-				  <li><a  href="meeting.html">Next Meeting late July 2026 at Front Row Homer Glen </a></li> 
+				<!--  <li> >Association Meetings:</li>> -->
+				  <li><a  href="meeting.html">Next Association Meeting late July 2026 at Front Row Homer Glen </a></li> 
            </ul> 
 
         </div>
@@ -235,6 +235,7 @@
 </div>
 </body>
 </html>
+
 
 
 
