--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             
             <ul>
 			       
-				 <li>Contracts Posted: Football / First Round </li>
+			<!--- <li>Contracts Posted: Football / First Round </li> -->
 				<li>Contracts Posted: Football / Second Round.</li>
 				<li>Contracts Posted: Football / Second Roun</li> 
 			<!--	<li>SContracts Posted: Football / Semifinals .</li>
