--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 			       
 			<!--- <li>Contracts Posted: Football / First Round </li> -->
 				<li>Contracts Posted: Football / Second Round.</li>
-				<li>Contracts Posted: Football / Second Roun</li> 
+				<li>Contracts Posted: Football / Quarterfinal Round</li> 
 			<!--	<li>SContracts Posted: Football / Semifinals .</li>
 				<li>Contracts Posted: Football / Semifinals </li> -->
 				<li></li> 
