--- a/index.html
+++ b/index.html
@@ -165,10 +165,11 @@
             <ul>
 			       
 			<!-- <li>Contracts Posted: Football / First Round </li> 
-				<li>Contracts Posted: Football / Second Round.</li> -->
+				<li>Contracts Posted: Football / Second Round.</li> 
 				<li>Contracts Posted: Football / Quarterfinal </li> 
-				<li>Contracts Posted: Football / Semifinals .</li>
-				<li>Contracts Posted: Football /finals </li>
+				<li>Contracts Posted: Football / Semifinals .</li> 
+				<li>Contracts Posted: Football /finals </li> -->
+				<li> Football State Finals November 28th & 29th </li>
 				<li></li> 
 				</ul>	
             
