--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 				<li>Contracts Posted: Football / Semifinals .</li> 
 				<li>Contracts Posted: Football /finals </li> 
 				<li> Football State Finals November 28th & 29th </li> -->
+				<li> Football season start August 21st 2026
 				<li></li> 
 				</ul>	
             
