--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
     <!--  <div id="cont_dd35e81a9ce04289a2046eed57095cfa"><script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/dd35e81a9ce04289a2046eed57095cfa"></script></div> -->
    
       <!-- <img src="images/thinksgiving.jpg" style="top:03%; left:80%" height="113" width="190"  />
-       <p style="text-align:center;"><strong>Happy Thingsgiving </strong></p> 
-   <img src="images/footballl ihsa.jpeg" style="top:03%; left:80%" height="113" width="190"  /> -->
-	<img src="images/ref5.gif"   style="top:03%; left:80%" height="125" width="225"  />
-    <!-- <p style="text-align:center;"><strong>Wilson Football is the official ball for IHSA</strong></p> -->
+       <p style="text-align:center;"><strong>Happy Thingsgiving </strong></p> -->
+   <img src="images/footballl ihsa.jpeg" style="top:03%; left:80%" height="113" width="190"  /> 
+<!--	<img src="images/ref5.gif"   style="top:03%; left:80%" height="125" width="225"  /> -->
+	     <p style="text-align:center;"><strong>Wilson Football is the official ball for IHSA</strong></p> 
      
     <!-- 	<img src="images/ref5.gif" style="top:03%; left:80%" height="136" width="331"  /> -->
      	
